 3. Better check/radio positioning.
 4. Fix background painting with some toolbars.
 5. Draw window frames square.
 6. Fix rounding of check/radio/splitter/expander highlight.
 7. Set toolbar frame width to 0 if not drawing borders.
 8. When toggling menubar, or statusbar, queue a redraw of the window.
 9. Decrease size of SWT toolbars.
10. Disable background image and gradient for SWT apps.
11. Only disallow QtCurve's colours to be overridden if run as root.

1.2.0
-----
 1. Draw etch effect on radios if using a button effect, and not using button-like
    check/radios.
 2. If drawing square non-gtk style scrollviews, use a dark/light borders.
 3. If drawing square scrollviews, set frame width to 1 if using thin scrollbar
    groove.
 4. Add options to draw square progress and entry fields when rounding.
 5. Add option to control whether progressbars have a border on all sides, or just
    top/bottom.
 6. Add option to colour default buttons using highlight colour.
 7. Expand selected check/radio colour option so as to be able to specify colour.
 8. Add circular slider style.
 9. Add glow to mouse over of slider handles (not scrollbars).
10. Add option to draw stripes on scrollbar sliders.
11. Add a 'faded' style porgressbar stripe option.
12. Add option to draw agua shine on custom gradients.
13. Improve appearance of button style check and radio buttons.
14. Add option to control whether scrollbar groove has a border or not.
15. Dont use pixmaps to draw rounded slider, or radio buttons.
16. Add option to increase size of check/radios - default is now 15pixels.
    (For Mozilla apps, the old 13pixel size will be used).
17. Fix calculation of alpha values for square rings.
18. Fix progressbar glow central position.
19. Draw more frames.
20. Fix image/gradient background issues with wxWidgets applications. 
    (Use gtk_widget_translate_coordinates to translate widgets coordinates
     relative to window.)

1.1.1
-----
1. Alter alpha settings of square rings.